tests/ui/type-inference/unbounded-type-param-in-fn.stderr
error[E0282]: type annotations needed
  --> $DIR/unbounded-type-param-in-fn.rs:6:5
   |
LL |     foo();
   |     ^^^ cannot infer type of the type parameter `T` declared on the function `foo`
   |
note: type must be known for type parameter in this
  --> $DIR/unbounded-type-param-in-fn.rs:1:1
   |
LL | fn foo<T>() -> T {
   | ^^^^^^^^^^^^^^^^
help: consider specifying the generic argument
   |
LL |     foo::<T>();
   |        +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
